# zehut

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/scripts/: bump.py
.github/workflows/: Dockerfile.integration  publish.yml  security-checks.yml  tests.yml
docs/: identity-model.md  testing.md  threat-model.md
docs/superpowers/plans/: 2026-04-24-zehut-cli-v1.md
docs/superpowers/specs/: 2026-04-24-zehut-cli-design.md  2026-04-24-zehut-subusers.md
scripts/: lint-md.sh
tests/: test_self_verify.py  test_smoke.py
tests/integration/: test_backend_system_integration.py
tests/unit/: conftest.py  test_backend_logical.py  test_backend_subuser.py  test_backend_system.py  test_cli_errors.py  test_cli_framework.py  test_cli_output.py  test_cmd_configuration.py  test_cmd_doctor.py  test_cmd_globals.py  test_cmd_init.py  test_cmd_user_create.py  test_cmd_user_crud.py  test_cmd_user_switch.py  test_config.py  test_fs.py  test_privilege.py  test_users.py
zehut/: __init__.py  __main__.py  config.py  fs.py  privilege.py  users.py
zehut/backend/: __init__.py  base.py  logical.py  subuser.py  system.py
zehut/cli/: __init__.py  _errors.py  _output.py
zehut/cli/_commands/: configuration.py  doctor.py  explain.py  init.py  learn.py  overview.py  user.py
